# ChangeLog for dev-python/pyacoustid
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyacoustid/ChangeLog,v 1.6 2014/03/22 18:55:30 kensington Exp $

  22 Mar 2014; Michael Palimaka <kensington@gentoo.org> -pyacoustid-0.7.ebuild:
  Remove old.

  20 Oct 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org> metadata.xml:
  Move to maintainer-needed

*pyacoustid-1.0.0 (08 Jun 2013)

  08 Jun 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  +pyacoustid-1.0.0.ebuild:
  Version bump and conversion to EAPI5

  30 May 2012; Kacper Kowalik <xarthisius@gentoo.org> pyacoustid-0.7.ebuild:
  Correct dependencies

  29 May 2012; Jeff Horelick <jdhore@gentoo.org> pyacoustid-0.7.ebuild:
  Keyword ~x86

*pyacoustid-0.7 (29 May 2012)

  29 May 2012; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  +pyacoustid-0.7.ebuild, +metadata.xml:
  New ebuild for dev-python/pyacoustid module for Chromaprint acoustic
  fingerprinting