@@ -2,24 +2,14 @@
 Hash: SHA256
 
 DIST pyacoustid-1.0.0.tar.gz 10476 SHA256 31900428e7b344dca0c2da594b387e88620c319298e3a6400a968078194407d4 SHA512 4eabf32e7d958bf7330e852184f5ddf3105007179ca2c45b75c1a5b0f0898649e703aa333cffccac85eb7b18b54255f2e5d588897adfb9f0ef2596e9c0b2fe5a WHIRLPOOL 084bc175021db2b344484fa5f03bf8b63b78ba21f92e050da93d36dcded494ff62f6344f59f8f0027b8b42a4bb6a1d21d22408a4f5679023c10eb37907ab1b79
+EBUILD pyacoustid-1.0.0-r1.ebuild 783 SHA256 c08729f9552bb7c9468c47deb7039a9a5157965dee423d6391c8634eb7695830 SHA512 897574bd8a265be8ebdb29e9f148c2162493462c1d2375d8f22584ee0a395e3e6ac4e2367dd17cd874b36e9604aae0e04815f20b5722e99e8ef30780df5cb019 WHIRLPOOL 02a016b78ff6795ffd05707fc2db553b4545cf73096edc65256cd7fc07920c94bcc27f297479cca449af794f964c02a2115c0fb3692b28a20e265ff951c2341d
 EBUILD pyacoustid-1.0.0.ebuild 668 SHA256 3721e932258330a13cc23c280f00a83a9b24113271169437dc6193b84207d9cb SHA512 f8d229ec7a60afa6bffdd86ca5b35159d6e22f892843bf8c979f2ae039c6a53ed66e8dcc77329cccf274172ae35779773bb840d3487847b2aeb6d46eecc4e66c WHIRLPOOL 033aadb2533ff76ec903c8b8970fc952160102746eaa033ea5bce135d35aec5185560f6d5dd8710c0311223a751453ef6fb5678fe32d7804eb3a5a85371c86bb
-MISC ChangeLog 990 SHA256 b2badf87b54d7158db6cc45c6c6ca0c82559b9df9cc7ef1db755a16b2d5527b2 SHA512 017358329b88e95b487a13c7abdbc2dc913aa26704eaed05759939b1c27a275aaec73200928199f09f837e5889868ff9462f31b4a9d7eb4265c8a6b0f2f01534 WHIRLPOOL 47865b1e4732571772e008c8cf9f816fc4ac36de24f05908bdac6f2508d5c3bed3f5bf1637e44cbab37bbf6df12b40898db6dda9e64638d036c33a37a72d8b46
+MISC ChangeLog 1168 SHA256 d820d9a0cd1787a05c4f41595a0a737a17d1142b903817e6bc5bf6c19bcdc698 SHA512 e3d2796bcda23e1b8c25d0935fc555fdfa65ccab4a9074164be009b0fe5cca030d9b72381d49e7a859f623655ee8ed17148516026b82e00f50fe42ad5cba0b91 WHIRLPOOL 43a3720450300ef6acf00545a2791aa279709fd74e1e377892f5158032641cf3e3af17b83b3cb3580859b691e786c9f318577b7a0e56e333b29d52cf27951aba
 MISC metadata.xml 561 SHA256 d45be3aa473fcdef181cdc398db06b1e9d9465faabc4556cf31d4c3b288340f0 SHA512 7c580a6d6d063bc68903704b0e37a51a6db1a310dce2bb8441dbabb9202c4254c4647bc38b523d39944fb6a7b79f5342faf454057d24e406ae2b32972a93798c WHIRLPOOL 7732e56fb30b92e6a50ce04a90ab7d32d72b663b292e4c8d2eb813aef01fb2f1e60e47b48e8ae96a82de7faf0a70fdab8f2b88fe80b5c67b82b16f7e1d14cf79
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJiBAEBCABMBQJTLdyiRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
-MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
-7A96EAClBrWEpxQKI0H3ghLuGjJ9cTJDrfSsEi7nREOSFccJ4A+nS2kjsa8hpZU8
-Yyjn64BCk/YSS+6JlDaYTm0swyj0iKQoYs+mAm08ioo64c7CCY1V2IZ2Wu2w/GX7
-9ZbtYoSf3mrQV5+hTnjkJGahHJfG8VdpwzjJmEXWjEbHkSgm1+ge6NaAQd17YBuD
-vinFTNAkVU/ISMn/h5JrXQt3Ke57AQ++adFl5URGduoVGwCVYGgC8su4B83ZYw35
-u8OwN2L3QeNAG55iU2YPdum63RRvrxBhhveNiEaBFfrsYttrF99Cw9nCUuwPra7q
-/N/G/9EOueBfBFyPns6wVSQMa10Lgn/389nwf2LJM2JlVBdeHgUeF5QHrxs4yhbo
-30OeOXSRiUx0DnlLcpjPhnEDpMFre2IELs9WrjWYycoteoNZ3DxQFwrj8AAAueMg
-QUHmGZb+diDe5BR1iRK7jP5UIe5veGrlp6M/zRIS9sQjzBJwyoKIJPs+kbAkWvMH
-lFbJ4Ggr9IqVyzXYavjtucdZ/5+auzYLh7nFI2vLy1oy/3nq/lr8O38+xYHjlMpc
-wayLrgLQpFNandYdtCTpcLbVdJnOW2cmWRF0NMVZKn55j15qZ/3ORhnOayHLADI0
-/GQ+ioZUufGYGJv5d09V4DRvjuuVm/JJiJwO6oEjiK2s0M4Dzg==
-=MYrA
+iEYEAREIAAYFAlM7ncUACgkQso7CE7gHKw3oRACeKTP26Z3f6Jk9pVkq9Iw2UKYd
+CGcAmgJApfnjY6wg9ec4BdWkgk1kxsze
+=2bp2
 -----END PGP SIGNATURE-----
