@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pyacoustid
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyacoustid/ChangeLog,v 1.6 2014/03/22 18:55:30 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyacoustid/ChangeLog,v 1.7 2014/04/02 05:26:04 idella4 Exp $
+
+*pyacoustid-1.0.0-r1 (02 Apr 2014)
+
+  02 Apr 2014; Ian Delaney <idella4@gentoo.org> +pyacoustid-1.0.0-r1.ebuild:
+  revbump; add IUSE examples, install_all phase, fixes Bug #493326
 
   22 Mar 2014; Michael Palimaka <kensington@gentoo.org> -pyacoustid-0.7.ebuild:
   Remove old.
